--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -2,30 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Import library gb_mep\n",
     "import gb_mep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Load all required files after importing relevant libraries\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "santander_training = pd.read_csv('../data/santander_train.csv') \n",
+    "santander_train = pd.read_csv('../data/santander_train.csv') \n",
     "santander_test = pd.read_csv('../data/santander_test.csv') \n",
-    "santander_distances = np.load('../data/santander_distances.npy')\n"
+    "santander_distances = np.load('../data/santander_distances.npy')\n",
+    "with open('../data/santander_dictionary.pkl', 'rb') as f:\n",
+    "    santander_dictionary = pickle.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -49,15 +53,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Rental Id</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Bike Id</th>\n",
-       "      <th>End Date</th>\n",
-       "      <th>EndStation Id</th>\n",
-       "      <th>EndStation Name</th>\n",
-       "      <th>Start Date</th>\n",
-       "      <th>StartStation Id</th>\n",
-       "      <th>StartStation Name</th>\n",
        "      <th>start_id</th>\n",
        "      <th>end_id</th>\n",
        "      <th>start_time</th>\n",
@@ -67,15 +62,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>117501471</td>\n",
-       "      <td>780</td>\n",
-       "      <td>8657</td>\n",
-       "      <td>02/03/2022 00:13</td>\n",
-       "      <td>501.0</td>\n",
-       "      <td>Cephas Street, Bethnal Green</td>\n",
-       "      <td>02/03/2022 00:00</td>\n",
-       "      <td>278</td>\n",
-       "      <td>Tooley Street, Bermondsey</td>\n",
        "      <td>722</td>\n",
        "      <td>131</td>\n",
        "      <td>0.483492</td>\n",
@@ -83,15 +69,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>117501472</td>\n",
-       "      <td>1380</td>\n",
-       "      <td>7261</td>\n",
-       "      <td>02/03/2022 00:23</td>\n",
-       "      <td>376.0</td>\n",
-       "      <td>Millbank Tower, Pimlico</td>\n",
-       "      <td>02/03/2022 00:00</td>\n",
-       "      <td>596</td>\n",
-       "      <td>Parson's Green , Parson's Green</td>\n",
        "      <td>531</td>\n",
        "      <td>460</td>\n",
        "      <td>0.484768</td>\n",
@@ -99,15 +76,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>117501473</td>\n",
-       "      <td>240</td>\n",
-       "      <td>19838</td>\n",
-       "      <td>02/03/2022 00:04</td>\n",
-       "      <td>362.0</td>\n",
-       "      <td>Royal College Street, Camden Town</td>\n",
-       "      <td>02/03/2022 00:00</td>\n",
-       "      <td>797</td>\n",
-       "      <td>Ossulston Street, Somers Town</td>\n",
        "      <td>515</td>\n",
        "      <td>603</td>\n",
        "      <td>0.624303</td>\n",
@@ -115,15 +83,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>117501474</td>\n",
-       "      <td>780</td>\n",
-       "      <td>18705</td>\n",
-       "      <td>02/03/2022 00:13</td>\n",
-       "      <td>478.0</td>\n",
-       "      <td>Stepney Green Station, Stepney</td>\n",
-       "      <td>02/03/2022 00:00</td>\n",
-       "      <td>217</td>\n",
-       "      <td>Wormwood Street, Liverpool Street</td>\n",
        "      <td>804</td>\n",
        "      <td>689</td>\n",
        "      <td>0.807900</td>\n",
@@ -131,15 +90,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>117501478</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>10602</td>\n",
-       "      <td>02/03/2022 00:31</td>\n",
-       "      <td>700.0</td>\n",
-       "      <td>Battersea Church Road, Battersea</td>\n",
-       "      <td>02/03/2022 00:01</td>\n",
-       "      <td>74</td>\n",
-       "      <td>Vauxhall Cross, Vauxhall</td>\n",
        "      <td>740</td>\n",
        "      <td>48</td>\n",
        "      <td>1.568787</td>\n",
@@ -151,27 +101,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6453258</th>\n",
-       "      <td>124122193</td>\n",
-       "      <td>420</td>\n",
-       "      <td>21790</td>\n",
-       "      <td>16/08/2022 23:59</td>\n",
-       "      <td>665.0</td>\n",
-       "      <td>Smugglers Way, Wandsworth</td>\n",
-       "      <td>16/08/2022 23:52</td>\n",
-       "      <td>735</td>\n",
-       "      <td>Grant Road East, Clapham Junction</td>\n",
        "      <td>302</td>\n",
        "      <td>637</td>\n",
        "      <td>241912.321072</td>\n",
@@ -179,15 +111,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6453259</th>\n",
-       "      <td>124122190</td>\n",
-       "      <td>420</td>\n",
-       "      <td>12350</td>\n",
-       "      <td>16/08/2022 23:59</td>\n",
-       "      <td>676.0</td>\n",
-       "      <td>Hartington Road, Stockwell</td>\n",
-       "      <td>16/08/2022 23:52</td>\n",
-       "      <td>74</td>\n",
-       "      <td>Vauxhall Cross, Vauxhall</td>\n",
        "      <td>740</td>\n",
        "      <td>342</td>\n",
        "      <td>241912.686823</td>\n",
@@ -195,15 +118,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6453260</th>\n",
-       "      <td>124122202</td>\n",
-       "      <td>240</td>\n",
-       "      <td>19139</td>\n",
-       "      <td>16/08/2022 23:57</td>\n",
-       "      <td>770.0</td>\n",
-       "      <td>Gwendwr Road, West Kensington</td>\n",
-       "      <td>16/08/2022 23:53</td>\n",
-       "      <td>595</td>\n",
-       "      <td>Hammersmith Road, Hammersmith</td>\n",
        "      <td>327</td>\n",
        "      <td>324</td>\n",
        "      <td>241913.941339</td>\n",
@@ -211,15 +125,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6453261</th>\n",
-       "      <td>124122207</td>\n",
-       "      <td>360</td>\n",
-       "      <td>18066</td>\n",
-       "      <td>16/08/2022 23:59</td>\n",
-       "      <td>368.0</td>\n",
-       "      <td>Harriet Street, Knightsbridge</td>\n",
-       "      <td>16/08/2022 23:53</td>\n",
-       "      <td>424</td>\n",
-       "      <td>Ebury Bridge, Pimlico</td>\n",
        "      <td>224</td>\n",
        "      <td>337</td>\n",
        "      <td>241913.962367</td>\n",
@@ -227,15 +132,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6453262</th>\n",
-       "      <td>124122238</td>\n",
-       "      <td>60</td>\n",
-       "      <td>21620</td>\n",
-       "      <td>16/08/2022 23:58</td>\n",
-       "      <td>701.0</td>\n",
-       "      <td>Vicarage Crescent, Battersea</td>\n",
-       "      <td>16/08/2022 23:57</td>\n",
-       "      <td>701</td>\n",
-       "      <td>Vicarage Crescent, Battersea</td>\n",
        "      <td>744</td>\n",
        "      <td>744</td>\n",
        "      <td>241917.408859</td>\n",
@@ -243,72 +139,63 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6453263 rows × 13 columns</p>\n",
+       "<p>6453263 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Rental Id  Duration  Bike Id          End Date  EndStation Id  \\\n",
-       "0        117501471       780     8657  02/03/2022 00:13          501.0   \n",
-       "1        117501472      1380     7261  02/03/2022 00:23          376.0   \n",
-       "2        117501473       240    19838  02/03/2022 00:04          362.0   \n",
-       "3        117501474       780    18705  02/03/2022 00:13          478.0   \n",
-       "4        117501478      1800    10602  02/03/2022 00:31          700.0   \n",
-       "...            ...       ...      ...               ...            ...   \n",
-       "6453258  124122193       420    21790  16/08/2022 23:59          665.0   \n",
-       "6453259  124122190       420    12350  16/08/2022 23:59          676.0   \n",
-       "6453260  124122202       240    19139  16/08/2022 23:57          770.0   \n",
-       "6453261  124122207       360    18066  16/08/2022 23:59          368.0   \n",
-       "6453262  124122238        60    21620  16/08/2022 23:58          701.0   \n",
+       "         start_id  end_id     start_time       end_time\n",
+       "0             722     131       0.483492      13.192747\n",
+       "1             531     460       0.484768      23.477447\n",
+       "2             515     603       0.624303       4.196019\n",
+       "3             804     689       0.807900      13.604670\n",
+       "4             740      48       1.568787      31.912915\n",
+       "...           ...     ...            ...            ...\n",
+       "6453258       302     637  241912.321072  241919.498489\n",
+       "6453259       740     342  241912.686823  241919.489431\n",
+       "6453260       327     324  241913.941339  241917.596443\n",
+       "6453261       224     337  241913.962367  241919.498538\n",
+       "6453262       744     744  241917.408859  241918.379397\n",
        "\n",
-       "                           EndStation Name        Start Date  StartStation Id  \\\n",
-       "0             Cephas Street, Bethnal Green  02/03/2022 00:00              278   \n",
-       "1                  Millbank Tower, Pimlico  02/03/2022 00:00              596   \n",
-       "2        Royal College Street, Camden Town  02/03/2022 00:00              797   \n",
-       "3           Stepney Green Station, Stepney  02/03/2022 00:00              217   \n",
-       "4         Battersea Church Road, Battersea  02/03/2022 00:01               74   \n",
-       "...                                    ...               ...              ...   \n",
-       "6453258          Smugglers Way, Wandsworth  16/08/2022 23:52              735   \n",
-       "6453259         Hartington Road, Stockwell  16/08/2022 23:52               74   \n",
-       "6453260      Gwendwr Road, West Kensington  16/08/2022 23:53              595   \n",
-       "6453261      Harriet Street, Knightsbridge  16/08/2022 23:53              424   \n",
-       "6453262       Vicarage Crescent, Battersea  16/08/2022 23:57              701   \n",
-       "\n",
-       "                         StartStation Name  start_id  end_id     start_time  \\\n",
-       "0                Tooley Street, Bermondsey       722     131       0.483492   \n",
-       "1          Parson's Green , Parson's Green       531     460       0.484768   \n",
-       "2            Ossulston Street, Somers Town       515     603       0.624303   \n",
-       "3        Wormwood Street, Liverpool Street       804     689       0.807900   \n",
-       "4                 Vauxhall Cross, Vauxhall       740      48       1.568787   \n",
-       "...                                    ...       ...     ...            ...   \n",
-       "6453258  Grant Road East, Clapham Junction       302     637  241912.321072   \n",
-       "6453259           Vauxhall Cross, Vauxhall       740     342  241912.686823   \n",
-       "6453260      Hammersmith Road, Hammersmith       327     324  241913.941339   \n",
-       "6453261              Ebury Bridge, Pimlico       224     337  241913.962367   \n",
-       "6453262       Vicarage Crescent, Battersea       744     744  241917.408859   \n",
-       "\n",
-       "              end_time  \n",
-       "0            13.192747  \n",
-       "1            23.477447  \n",
-       "2             4.196019  \n",
-       "3            13.604670  \n",
-       "4            31.912915  \n",
-       "...                ...  \n",
-       "6453258  241919.498489  \n",
-       "6453259  241919.489431  \n",
-       "6453260  241917.596443  \n",
-       "6453261  241919.498538  \n",
-       "6453262  241918.379397  \n",
-       "\n",
-       "[6453263 rows x 13 columns]"
+       "[6453263 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "santander_training"
+    "santander_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = gb_mep.gb_mep(df=santander_train, id_map=santander_dictionary, distance_matrix=santander_distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m names(G)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'names' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "names(G)"
    ]
   }
  ],
