further edits - still need to debug

--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -174,71 +174,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = gb_mep.gb_mep(df=santander_train, id_map=santander_dictionary, distance_matrix=santander_distances)"
+    "G = gb_mep.gb_mep(df=santander_train, id_map=santander_dictionary, distance_matrix=santander_distances)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2883"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(end_breaks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 1 - Abbotsbury Road, Holland Park                     \r"
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787944  0.36787944 -0.86466472\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787944  0.36787944 -0.86466472\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787945 -0.8646647   0.36787944  0.36787944 -0.86466472\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787944 -0.86466471  0.36787944  0.36787944 -0.86466472\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787945  0.36787944 -0.86466472\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787944  0.36787945 -0.8646647\n",
+      "  1.        ]\n",
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787944  0.36787944 -0.86466471\n",
+      "  1.        ]\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "(0, 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m             time_diffs_A[k, secondary_node] \u001b[39m=\u001b[39m t \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstart_times[secondary_node][:start_breaks[k]]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m             time_diffs_A_prime[k, secondary_node] \u001b[39m=\u001b[39m t \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mend_times[secondary_node][:end_breaks[k]]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m res[node] \u001b[39m=\u001b[39m minimize(fun\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnegative_loglikelihood_full, x0\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49marray([np\u001b[39m.\u001b[39;49mlog(k\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mT), \u001b[39m-\u001b[39;49m\u001b[39m1.0\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m2.0\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m1.0\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m1.0\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m2.0\u001b[39;49m, \u001b[39m0.0\u001b[39;49m]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m             args\u001b[39m=\u001b[39;49m(node, time_diffs_A, time_diffs_A_prime))\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_minimize.py:705\u001b[0m, in \u001b[0;36mminimize\u001b[0;34m(fun, x0, args, method, jac, hess, hessp, bounds, constraints, tol, callback, options)\u001b[0m\n\u001b[1;32m    703\u001b[0m     res \u001b[39m=\u001b[39m _minimize_cg(fun, x0, args, jac, callback, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39moptions)\n\u001b[1;32m    704\u001b[0m \u001b[39melif\u001b[39;00m meth \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mbfgs\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m--> 705\u001b[0m     res \u001b[39m=\u001b[39m _minimize_bfgs(fun, x0, args, jac, callback, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49moptions)\n\u001b[1;32m    706\u001b[0m \u001b[39melif\u001b[39;00m meth \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnewton-cg\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m    707\u001b[0m     res \u001b[39m=\u001b[39m _minimize_newtoncg(fun, x0, args, jac, hess, hessp, callback,\n\u001b[1;32m    708\u001b[0m                              \u001b[39m*\u001b[39m\u001b[39m*\u001b[39moptions)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_optimize.py:1419\u001b[0m, in \u001b[0;36m_minimize_bfgs\u001b[0;34m(fun, x0, args, jac, callback, gtol, norm, eps, maxiter, disp, return_all, finite_diff_rel_step, xrtol, **unknown_options)\u001b[0m\n\u001b[1;32m   1416\u001b[0m \u001b[39mif\u001b[39;00m maxiter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1417\u001b[0m     maxiter \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(x0) \u001b[39m*\u001b[39m \u001b[39m200\u001b[39m\n\u001b[0;32m-> 1419\u001b[0m sf \u001b[39m=\u001b[39m _prepare_scalar_function(fun, x0, jac, args\u001b[39m=\u001b[39;49margs, epsilon\u001b[39m=\u001b[39;49meps,\n\u001b[1;32m   1420\u001b[0m                               finite_diff_rel_step\u001b[39m=\u001b[39;49mfinite_diff_rel_step)\n\u001b[1;32m   1422\u001b[0m f \u001b[39m=\u001b[39m sf\u001b[39m.\u001b[39mfun\n\u001b[1;32m   1423\u001b[0m myfprime \u001b[39m=\u001b[39m sf\u001b[39m.\u001b[39mgrad\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_optimize.py:383\u001b[0m, in \u001b[0;36m_prepare_scalar_function\u001b[0;34m(fun, x0, jac, args, bounds, epsilon, finite_diff_rel_step, hess)\u001b[0m\n\u001b[1;32m    379\u001b[0m     bounds \u001b[39m=\u001b[39m (\u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39minf, np\u001b[39m.\u001b[39minf)\n\u001b[1;32m    381\u001b[0m \u001b[39m# ScalarFunction caches. Reuse of fun(x) during grad\u001b[39;00m\n\u001b[1;32m    382\u001b[0m \u001b[39m# calculation reduces overall function evaluations.\u001b[39;00m\n\u001b[0;32m--> 383\u001b[0m sf \u001b[39m=\u001b[39m ScalarFunction(fun, x0, args, grad, hess,\n\u001b[1;32m    384\u001b[0m                     finite_diff_rel_step, bounds, epsilon\u001b[39m=\u001b[39;49mepsilon)\n\u001b[1;32m    386\u001b[0m \u001b[39mreturn\u001b[39;00m sf\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_differentiable_functions.py:158\u001b[0m, in \u001b[0;36mScalarFunction.__init__\u001b[0;34m(self, fun, x0, args, grad, hess, finite_diff_rel_step, finite_diff_bounds, epsilon)\u001b[0m\n\u001b[1;32m    155\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf \u001b[39m=\u001b[39m fun_wrapped(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mx)\n\u001b[1;32m    157\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_update_fun_impl \u001b[39m=\u001b[39m update_fun\n\u001b[0;32m--> 158\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_update_fun()\n\u001b[1;32m    160\u001b[0m \u001b[39m# Gradient evaluation\u001b[39;00m\n\u001b[1;32m    161\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcallable\u001b[39m(grad):\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_differentiable_functions.py:251\u001b[0m, in \u001b[0;36mScalarFunction._update_fun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    249\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_update_fun\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    250\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf_updated:\n\u001b[0;32m--> 251\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_update_fun_impl()\n\u001b[1;32m    252\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf_updated \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_differentiable_functions.py:155\u001b[0m, in \u001b[0;36mScalarFunction.__init__.<locals>.update_fun\u001b[0;34m()\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mupdate_fun\u001b[39m():\n\u001b[0;32m--> 155\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf \u001b[39m=\u001b[39m fun_wrapped(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mx)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/scipy/optimize/_differentiable_functions.py:137\u001b[0m, in \u001b[0;36mScalarFunction.__init__.<locals>.fun_wrapped\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnfev \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    134\u001b[0m \u001b[39m# Send a copy because the user may overwrite it.\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[39m# Overwriting results in undefined behaviour because\u001b[39;00m\n\u001b[1;32m    136\u001b[0m \u001b[39m# fun(self.x) will change self.x, with the two no longer linked.\u001b[39;00m\n\u001b[0;32m--> 137\u001b[0m fx \u001b[39m=\u001b[39m fun(np\u001b[39m.\u001b[39;49mcopy(x), \u001b[39m*\u001b[39;49margs)\n\u001b[1;32m    138\u001b[0m \u001b[39m# Make sure the function returns a true scalar\u001b[39;00m\n\u001b[1;32m    139\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39misscalar(fx):\n",
-      "File \u001b[0;32m~/Documents/github/gb-mep/lib/gb_mep/gbmep.py:74\u001b[0m, in \u001b[0;36mnegative_loglikelihood_full\u001b[0;34m(self, params, node_index, time_diffs_A, time_diffs_A_prime)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[39mfor\u001b[39;00m node \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnodes:\n\u001b[1;32m     72\u001b[0m     \u001b[39m# Compensator components of loglikelihood\u001b[39;00m\n\u001b[1;32m     73\u001b[0m     ll \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39mparams[\u001b[39m3\u001b[39m] \u001b[39m*\u001b[39m ds[node]) \u001b[39m*\u001b[39m params[\u001b[39m1\u001b[39m] \u001b[39m/\u001b[39m params[\u001b[39m2\u001b[39m] \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msum(np\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39mparams[\u001b[39m2\u001b[39m] \u001b[39m*\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mT \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstart_times[node]) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[0;32m---> 74\u001b[0m     ll \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39mparams[\u001b[39m6\u001b[39m] \u001b[39m*\u001b[39m ds[node]) \u001b[39m*\u001b[39m params[\u001b[39m4\u001b[39m] \u001b[39m/\u001b[39m params[\u001b[39m5\u001b[39m] \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msum(np\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39mparams[\u001b[39m5\u001b[39m] \u001b[39m*\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mT \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mend_times[node]) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[1;32m     75\u001b[0m     \u001b[39m# Loop over all events and update recursive terms A and A_prime\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     \u001b[39mfor\u001b[39;00m k, _ \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstart_times[node_index]):    \n",
-      "\u001b[0;31mKeyError\u001b[0m: (0, 0)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:75: RuntimeWarning: overflow encountered in exp\n",
+      "  ll += np.exp(-params[3] * ds[node]) * params[1] / params[2] * np.sum(np.exp(-params[2] * (self.T - self.start_times[node])) - 1)\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:76: RuntimeWarning: overflow encountered in exp\n",
+      "  ll += np.exp(-params[6] * ds[node]) * params[4] / params[5] * np.sum(np.exp(-params[5] * (self.T - self.end_times[node])) - 1)\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:79: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  A[k, node] = ((np.exp(-params[2] * time_diffs[k-1]) * A[k-1, node]) if k > 0 else 0) + np.sum(np.exp(-params[2] * time_diffs_A[k, node]))\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:80: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  A_prime[k, node] = ((np.exp(-params[5] * time_diffs[k-1]) * A_prime[k-1, node]) if k > 0 else 0) + np.sum(np.exp(-params[5] * time_diffs_A_prime[k, node]))\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:79: RuntimeWarning: overflow encountered in exp\n",
+      "  A[k, node] = ((np.exp(-params[2] * time_diffs[k-1]) * A[k-1, node]) if k > 0 else 0) + np.sum(np.exp(-params[2] * time_diffs_A[k, node]))\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:80: RuntimeWarning: overflow encountered in exp\n",
+      "  A_prime[k, node] = ((np.exp(-params[5] * time_diffs[k-1]) * A_prime[k-1, node]) if k > 0 else 0) + np.sum(np.exp(-params[5] * time_diffs_A_prime[k, node]))\n",
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:83: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  ll += np.sum(np.log(params[0] + B.sum(axis=1)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.01347553  0.36787944 -0.86466472  0.36787944  0.36787944 -0.86466472\n",
+      "  1.00000001]\n"
      ]
     }
    ],
    "source": [
     "node = 1\n",
     "self = G\n",
+    "thresh = 0\n",
     "from scipy.optimize import minimize\n",
     "print('\\r', node, '-', self.id_map[node], ' '*20, end='\\r')\n",
     "# Recursion\n",
-    "for secondary_node in self.nodes:\n",
+    "print('\\r', node, '-', self.id_map[node], ' '*20, end='\\r')\n",
+    "ds = self.distance_matrix[node]\n",
+    "# Recursion\n",
+    "time_diffs_A = {}; time_diffs_A_prime = {}\n",
+    "for secondary_node in np.where(ds <= thresh)[0]:\n",
     "    start_breaks = np.searchsorted(a=self.start_times[secondary_node], v=self.start_times[node], side='left')\n",
     "    end_breaks = np.searchsorted(a=self.end_times[secondary_node], v=self.start_times[node], side='left')\n",
-    "    time_diffs_A = {}; time_diffs_A_prime = {}\n",
     "    for k, t in enumerate(self.start_times[node]):\n",
     "        if k != 0:\n",
     "            time_diffs_A[k, secondary_node] = t - self.start_times[secondary_node][start_breaks[k-1]:start_breaks[k]]\n",
@@ -246,9 +252,86 @@
     "        else:\n",
     "            time_diffs_A[k, secondary_node] = t - self.start_times[secondary_node][:start_breaks[k]]\n",
     "            time_diffs_A_prime[k, secondary_node] = t - self.end_times[secondary_node][:end_breaks[k]]\n",
-    "res[node] = minimize(fun=self.negative_loglikelihood_full, x0=np.array([np.log(k+1/self.T), -1.0, -2.0, -1.0, -1.0, -2.0, 0.0]),\n",
-    "            args=(node, time_diffs_A, time_diffs_A_prime))"
+    "res = minimize(fun=self.negative_loglikelihood_full, x0=np.array([np.log((k+1)/self.T), -1.0, -2.0, -1.0, -1.0, -2.0, 0.0]),\n",
+    "                        args=(node, time_diffs_A, time_diffs_A_prime, np.where(ds <= thresh)[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.exp(-.000000000000000000000000000000001 * (self.T - self.start_times[node])) - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(-4*0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_index = 1\n",
+    "ds = self.distance_matrix[node_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((10,5)).sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
