completed functions for p-values; full debug and testing TBD

--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,18 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "2",
+     "ename": "AttributeError",
+     "evalue": "'gb_mep' object has no attribute 'pvals_gbmep_start'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb Cell 13\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m index \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m pp \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(res[index]\u001b[39m.\u001b[39mx)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m pp[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m pp[\u001b[39m1\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m q \u001b[39m=\u001b[39m G\u001b[39m.\u001b[39mpvals_mep(params\u001b[39m=\u001b[39mpp, node_index\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 2"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m pp \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(res3[index]\u001b[39m.\u001b[39mx)\n\u001b[1;32m     10\u001b[0m pp[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m pp[\u001b[39m1\u001b[39m]\n\u001b[0;32m---> 11\u001b[0m q4 \u001b[39m=\u001b[39m G\u001b[39m.\u001b[39;49mpvals_gbmep_start(param\u001b[39m=\u001b[39mpp, node_index\u001b[39m=\u001b[39mindex, thresh\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'gb_mep' object has no attribute 'pvals_gbmep_start'"
      ]
     }
    ],
@@ -234,11 +234,14 @@
     "index = 2\n",
     "pp = np.exp(res[index].x)\n",
     "pp[2] += pp[1]\n",
-    "q = G.pvals_mep(params=pp, node_index=4)\n",
+    "q = G.pvals_mep(params=pp, node_index=index)\n",
     "pp = np.exp(res2[index].x)\n",
     "pp[2] += pp[1]\n",
-    "q3 = G.pvals_sep(params=pp, node_index=4)\n",
-    "q2 = G.pvals_poisson_process(param=G.N[index]/G.T, node_index=4)"
+    "q3 = G.pvals_sep(params=pp, node_index=index)\n",
+    "q2 = G.pvals_poisson_process(param=G.N[index]/G.T, node_index=index)\n",
+    "pp = np.exp(res3[index].x)\n",
+    "pp[2] += pp[1]\n",
+    "q4 = G.pvals_gbmep_start(param=pp, node_index=index, thresh=1)"
    ]
   },
   {
