--- a/data/README
+++ b/data/README
@@ -1,1 +1,1 @@
-The `santander_locations.csv` file was downloaded from https://www.whatdotheyknow.com/request/2023_santander_docking_station_l#incoming-2286406. 
+The file `santander_locations.csv` was downloaded from https://www.whatdotheyknow.com/request/2023_santander_docking_station_l#incoming-2286406.
