--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -306,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 117 - Cadogan Close, Victoria Park                            \r"
+      " 164 - Cleveland Way, Stepney                                        \r"
      ]
     }
    ],
