added scripts for running jobs in parallel

--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -306,7 +306,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 164 - Cleveland Way, Stepney                                        \r"
+      " 196 - Denyer Street, Knightsbridge                                       \r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/fraspass/Documents/github/gb-mep/lib/gb_mep/gbmep.py:172: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ll += params[1] / params[2] * np.sum(np.exp(-params[2] * (self.T - self.start_times[node_index])) - 1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 535 - Pennington Street, Wapping                                            \r"
      ]
     }
    ],
