edits to scripts for obtaining results

--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -348,26 +348,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'res4' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb Cell 18\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m res5 \u001b[39m=\u001b[39m {}\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m node \u001b[39min\u001b[39;00m res4:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     r \u001b[39m=\u001b[39m G\u001b[39m.\u001b[39mfit(x0\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mconcatenate((res4[node]\u001b[39m.\u001b[39mx, res3[node]\u001b[39m.\u001b[39mx[\u001b[39m3\u001b[39m:\u001b[39m5\u001b[39m])), subset_nodes\u001b[39m=\u001b[39m[node], start_times\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, end_times\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, distance_start\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, distance_end\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, thresh\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     res5[node] \u001b[39m=\u001b[39m r[node]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'res4' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2 - Aberdeen Place, St. John's Wood                       \r"
      ]
     }
    ],
    "source": [
     "res_gbmep = {}\n",
-    "for node in res4:\n",
+    "for node in res_gbmep_self:\n",
     "    r = G.fit(x0=np.concatenate((res_gbmep_self[node].x, res_smep[node].x[3:5])), subset_nodes=[node], start_times=True, end_times=True, distance_start=True, distance_end=False, thresh=1)\n",
     "    res_gbmep[node] = r[node]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Save the results\n",
+    "with open('res_smep.pkl', 'wb') as f:\n",
+    "    pickle.dump(res_smep, f)"
    ]
   },
   {
