--- a/notebooks/Santander_Cycles.ipynb
+++ b/notebooks/Santander_Cycles.ipynb
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "res_mep = G.fit(x0=-np.ones(3), subset_nodes=G.nodes, start_times=False, end_times=True, distance_start=False, distance_end=False)"
+    "res_mep = G.fit(x0=-np.ones(3), subset_nodes=range(3), start_times=False, end_times=True, distance_start=False, distance_end=False)"
    ]
   },
   {
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "res_sep = G.fit(x0=-np.ones(3), subset_nodes=G.nodes, start_times=True, end_times=False, distance_start=False, distance_end=False)"
+    "res_sep = G.fit(x0=-np.ones(3), subset_nodes=range(3), start_times=True, end_times=False, distance_start=False, distance_end=False)"
    ]
   },
   {
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "res_smep = G.fit(x0=-np.ones(5), subset_nodes=G.nodes, start_times=True, end_times=True, distance_start=False, distance_end=False)"
+    "res_smep = G.fit(x0=-np.ones(5), subset_nodes=range(3), start_times=True, end_times=True, distance_start=False, distance_end=False)"
    ]
   },
   {
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "res_gbmep_self = G.fit(x0=-np.ones(4), subset_nodes=range(3), start_times=True, end_times=False, distance_start=True, distance_end=False, thresh=1)"
+    "res_gbmep_start = G.fit(x0=-np.ones(4), subset_nodes=range(3), start_times=True, end_times=False, distance_start=True, distance_end=False, thresh=1)"
    ]
   },
   {
@@ -368,38 +368,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Save the results\n",
-    "with open('res_smep.pkl', 'wb') as f:\n",
-    "    pickle.dump(res_smep, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "gb_mep.pvals_poisson_process() missing 1 required positional argument: 'start_times'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb Cell 19\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m index \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# p-values for Poisson process\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m p_poisson \u001b[39m=\u001b[39m G\u001b[39m.\u001b[39;49mpvals_poisson_process(param\u001b[39m=\u001b[39;49mres_pp[index], node_index\u001b[39m=\u001b[39;49mindex)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# p-values for MEP\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fraspass/Documents/github/gb-mep/notebooks/Santander_Cycles.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m pp \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(res_mep[index]\u001b[39m.\u001b[39mx)\n",
+      "\u001b[0;31mTypeError\u001b[0m: gb_mep.pvals_poisson_process() missing 1 required positional argument: 'start_times'"
+     ]
+    }
+   ],
    "source": [
     "index = 2\n",
-    "q_pp = G.pvals_poisson_process(param=G.N[index]/G.T, node_index=index)\n",
-    "pp = np.exp(res1[index].x)\n",
+    "# p-values for Poisson process\n",
+    "p_poisson = G.pvals_poisson_process(param=res_pp[index], node_index=index)\n",
+    "# p-values for MEP\n",
+    "pp = np.exp(res_mep[index].x)\n",
     "pp[2] += pp[1]\n",
-    "q_mep = G.pvals_mep(params=pp, node_index=index)\n",
-    "pp = np.exp(res2[index].x)\n",
+    "p_mep = G.pvals_mep(params=pp, node_index=index)\n",
+    "# p-values for SEP\n",
+    "pp = np.exp(res_sep[index].x)\n",
     "pp[2] += pp[1]\n",
-    "q_sep = G.pvals_sep(params=pp, node_index=index)\n",
-    "pp = np.exp(res3[index].x)\n",
+    "p_sep = G.pvals_sep(params=pp, node_index=index)\n",
+    "# p-values for SMEP\n",
+    "pp = np.exp(res_smep[index].x)\n",
     "pp[2] += pp[1]; pp[4] += pp[3]\n",
-    "q_smep = G.pvals_smep(params=pp, node_index=index)\n",
-    "pp = np.exp(res4[index].x)\n",
+    "p_smep = G.pvals_smep(params=pp, node_index=index)\n",
+    "# p-values for GB-MEP with start times only\n",
+    "pp = np.exp(res_gbmep_start[index].x)\n",
     "pp[2] += pp[1]\n",
-    "q_gbmep_self = G.pvals_gbmep_start(params=pp, node_index=index, thresh=1)\n",
-    "pp = np.exp(res5[index].x)\n",
+    "p_gbmep_start = G.pvals_gbmep_start(params=pp, node_index=index, thresh=1)\n",
+    "# p-values for GB-MEP\n",
+    "pp = np.exp(res_gbmep[index].x)\n",
     "pp[2] += pp[1]; pp[5] += pp[4]\n",
-    "q_gbmep = G.pvals_gbmep_start_self(params=pp, node_index=index, thresh=1)"
+    "p_gbmep = G.pvals_gbmep_start_self(params=pp, node_index=index, thresh=1)"
    ]
   },
   {
